@@ -1,3 +1,7 @@
+2006-08-29  Jean-Louis Martineau <martineau@zmanda.com>
+	* client-src/selfcheck.c: Print error message to stdout before
+				  calling error().
+
 2006-08-28  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/dumper.c (log_msgout): Seek to begining of file.
 
